--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="grid-x grid-margin-x small-up-3 medium-up-4 large-up-5">
     
         <div class="cell">
-          <img src="https://photos.google.com/photo/AF1QipMqPxE6hPhSPQGYVW9TrovrpSbeR1MDX7GWDl8v" alt="image for article">
+          <img src="https://lh3.googleusercontent.com/pw/AP1GczO_7vcqIdrg-zwzUAXDUVBMuY-h8XsNzXHnrDCJ-I3P1dI2oMCDganZqBCIG6TDbL0aKAiYfQHFtYAm5OAey19Wp5I78QkCGSliWMOawWfkEJ9BCl2c=w2400" alt="image for article">
         </div>
     
         <div class="cell">
