--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="grid-x grid-margin-x small-up-3 medium-up-4 large-up-5">
     
         <div class="cell">
-          <img src="https://lh3.googleusercontent.com/pw/AP1GczO_7vcqIdrg-zwzUAXDUVBMuY-h8XsNzXHnrDCJ-I3P1dI2oMCDganZqBCIG6TDbL0aKAiYfQHFtYAm5OAey19Wp5I78QkCGSliWMOawWfkEJ9BCl2c=w2400" alt="image for article">
+            <a href="https://lh3.googleusercontent.com/pw/AP1GczM5r18y0jccYn9cGLZmrtRS4yrh1vsU7ni58rdgvOZ4ovdF_jAQNKYKeL8B1OPfn9slCb2eMytd17grLgzy7I7ytfjyzqrGFSel1wcJMSt71SdF1k-y=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/pw/AP1GczM5r18y0jccYn9cGLZmrtRS4yrh1vsU7ni58rdgvOZ4ovdF_jAQNKYKeL8B1OPfn9slCb2eMytd17grLgzy7I7ytfjyzqrGFSel1wcJMSt71SdF1k-y=w600-h315-p-k" /> </a>
         </div>
     
         <div class="cell">
