news story addition

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="top-bar-left">
           <ul class="menu">
             <li><a href="https://www.linkedin.com/in/jayce-irby-6b647b318/">Linkedin</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="https://www.linkedin.com/posts/flagstar-bank_flagstarinter-jayce-v3mp4-activity-7224843946093371394-9WmD/">Corporate Internship Video</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Help</a></li>
           </ul>
@@ -128,7 +128,7 @@
           <div class="large-6 cell">
             <a href="https://lh3.googleusercontent.com/pw/AP1GczN-48afR0pwg6JET4eIMCn8vBORvPwP-nkzc99TDWWq_dtszQIxoGIAzwi9ucnbmNGAHgjvuIDbk9FyJI_WK-ay3imVuNNd-1Y0BXkclu0aIQ3h8HBR=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/pw/AP1GczN-48afR0pwg6JET4eIMCn8vBORvPwP-nkzc99TDWWq_dtszQIxoGIAzwi9ucnbmNGAHgjvuIDbk9FyJI_WK-ay3imVuNNd-1Y0BXkclu0aIQ3h8HBR=w600-h315-p-k" /> </a>          </div>
           <div class="large-6 cell">
-            <h5><a href="#"> LSU Super Bowl 2025 Economic Impact Team </a></h5>
+            <h5><a href="https://www.lsu.edu/business/cebpr/index.php"> LSU Super Bowl 2025 Economic Impact Team </a></h5>
             <p>
               <span><i class="fi-torso"> By Irby &nbsp;&nbsp;</i></span>
               <span><i class="fi-calendar"> 02/09/25 &nbsp;&nbsp;</i></span>
@@ -145,13 +145,13 @@
             <p><img src="https://placehold.it/600x370&text=Look at me!" alt="image for article" alt="article preview image"></p>
           </div>
           <div class="large-6 cell">
-            <h5><a href="#">NASA's SLS Rocket Sheds Saturn V Color Scheme in Design Review</a></h5>
+            <h5><a href="#">LSU's Newest Tiger!</a></h5>
             <p>
               <span><i class="fi-torso"> By Thadeus &nbsp;&nbsp;</i></span>
-              <span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
-              <span><i class="fi-comments"> 6 comments</i></span>
+              <span><i class="fi-calendar"> 8/22/22 &nbsp;&nbsp;</i></span>
+              <span><i class="fi-comments"> 0 comments</i></span>
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit beatae, ipsum delectus aperiam nesciunt magni facilis ullam.</p>
+            <p>Jayce has shown incredible determination and ambition by graduating high school a year early and making the bold move from Indiana to Louisiana to attend LSU. His decision to start this new chapter 17 hours away from home reflects his strong desire to embrace new opportunities and challenges. As he embarks on his journey as a Tiger, Jayce is eager to dive into his studies and pursue a degree in Information Systems & Analytics, a field he’s passionate about. His drive, along with his ability to adapt to such a big transition, showcases his commitment to success both academically and personally. With his excitement and determination, Jayce is ready to make the most of his time at LSU and build a bright future in the tech industry.</p>
           </div>
         </div>
     
