Updated section names and links

--- a/index.html
+++ b/index.html
@@ -45,43 +45,43 @@
         <ul class="menu vertical medium-horizontal medium-text-center" data-responsive-menu="drilldown medium-dropdown">
           <li class="has-submenu"><a href="#">Photo Shoots</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">LSU STADIUM PHOTO SHOOT</a></li>
-              <li><a href="#">PUERTO RICO TRIP</a></li>
-              <li><a href="#">BEACH FLICKS</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">LSU STADIUM PHOTO SHOOT</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">PUERTO RICO TRIP</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">BEACH FLICKS</a></li>
             </ul>
           </li>
-          <li class="has-submenu"><a href="#">Initiatives></a>
+          <li class="has-submenu"><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Initiatives</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">SUPER BOWL VOLUNTEER</a></li>
-              <li><a href="#">VIPS PUBLIC SCHOOLS VOLUNTEER</a></li>
-              <li><a href="#">COMMUNITY HARVEST FOOD BANK VOLUNTEER</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">SUPER BOWL VOLUNTEER</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">VIPS PUBLIC SCHOOLS VOLUNTEER</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">COMMUNITY HARVEST FOOD BANK VOLUNTEER</a></li>
             </ul>
           </li>
-          <li class="has-submenu"><a href="#">Modeling</a>
+          <li class="has-submenu"><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Modeling</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">Flagstar Corporate Model 2024</a></li>
-              <li><a href="#">Flagstar Corporate Model 2023</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Flagstar Corporate Model 2024</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Flagstar Corporate Model 2023</a></li>
             </ul>
           </li>
-          <li class="has-submenu"><a href="#">Desserts</a>
+          <li class="has-submenu"><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Desserts</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">Banana Pudding</a></li>
-              <li><a href="#">Oreo Cookie Dessert</a></li>
-              <li><a href="#">German Chocolate Cake</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Banana Pudding</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Oreo Cookie Dessert</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">German Chocolate Cake</a></li>
             </ul>
           </li>
-          <li class="has-submenu"><a href="#">Main Course Meals</a>
+          <li class="has-submenu"><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Main Course Meals</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">Broiled Cripsy-Wings</a></li>
-              <li><a href="#">Penne Chicken Alfredo</a></li>
-              <li><a href="#">Citris Steak-Tacos</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Broiled Cripsy-Wings</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Penne Chicken Alfredo</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Citris Steak-Tacos</a></li>
             </ul>
           </li>
-          <li class="has-submenu"><a href="#">Other</a>
+          <li class="has-submenu"><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Other</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Help</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">FAQ</a></li>
+              <li><a href="https://youtu.be/xvFZjo5PgG0?si=GzToOQKJ8jEET_bH">Contact</a></li>
             </ul>
           </li>
         </ul>
@@ -93,7 +93,7 @@
     <hr>
     
     <div class="text-center">
-      <h4 style="margin: 0;" class="text-center">RECENT LOOKS</h4>
+      <h4 style="margin: 0;" class="text-center">POPULAR LOOKS</h4>
     </div>
     
     <hr>
