--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         </div>
         <div class="top-bar-right">
           <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+            <li><a href="https://www.lsu.edu/majors/business/isds.php">College Program</a></li>
           </ul>
         </div>
       </div>
