adding top banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <!-- optional CDN for Foundation Icons ^^ -->
   </head>
   <body>
-
+    <a href="#" class="docs-banner course-banner">
+    <div class="info">
+      <h5 class=""><strong>This website is part of a class assignment. &rsaquo;</strong></h5>
+    </div>
+  </a> 
     <header>
       <!-- Sub Navigation -->
       <div class="top-bar">
