--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     
         <div class="medium-6 cell">
           <ul class="menu align-right">
-            <li class="menu-text">Jayce Irby</li>
+            <li class="menu-text">Copyright © Jayce Irby</li>
           </ul>
         </div>
       </div>
